### [v0.3] - 2025-12-XX
#### Added
- Config::configurePrivacy(...) for defining whether to register logs or restrict what data to register.
- Collection and Item components for handling key-value pair arrays.
- ValidationWorker for validating data such as email addresses or passwords.
- ValidationFlags collection for handling validation flags.

#### Changed
- Skeleton: Update build.sh to account for last changes.
- DataWorker now uses Collection and Item components.
- Router now uses Collection and Item components.
- Template now uses Collection and Item components.
- PHP Version downgrade to 8.4 to support hosting deployment.

#### Fixed
- Skeleton: Sites folder not accounted for deploy.sh and index.php
- Skeleton: .htaccess fallback not working.
- Skeleton: Sites folder not accounted for watch.sh
- NotFoundException and NotAuthorizedException are not being handled correctly.

#### Removed
- htmlspecialchars method from Request::sanitizeData().
- meta tag HTTP headers from main.php Template.

---

### [v0.2] - 2025-12-06
#### Added
- Configuration of path redirects for 404 error.
- Support for .html template injection before and after #main div.
- Server::preload(__DIR__) for loading environment configuration.
- Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() for modular loading.
- Test suite added.
- Feature to enable authorization across parent domain and all subdomains.
- Bee::getBaseDomain() and Bee::getBuiltDomain(...) for getting base domain and subdomain.
- Bee::hashPassword(...) and AuthWorker::autologin(...) for automatic password hashing and auto-login.
- AuthWorker::getAuthorizedUserId() for getting authorized user ID.
- New methods and uses for SQL queries in DataWorker and DataSlave.
- Deploy script for Apache.

#### Changed
- Template::oneline() is now Template::flex(), allowing for dynamic creation of templates.
- Improvement of HTML semantics for main.php.